Dropdown overflow fixed

--- a/_thegrilllife_styles.css
+++ b/_thegrilllife_styles.css
@@ -50,7 +50,7 @@ text-align: center;
 	top: 50px;
 	background: black;
 	z-index: 1000;
-	width: 160px
+	width: 142px
 }
 
 .dropdown li{
